[feat] add available room
